# servant-auth-and-elm-example

./: .gitignore  README.md  Setup.hs  servant-auth-and-elm-example.cabal  stack.yaml
app/: Main.hs
elm/: elm-package.json  package.json
elm/src/: CsrfCookie.elm  Main.elm
elm/src/Native/: CsrfCookie.js
src/: Server.hs
static/: index.html
